--- a/css/normalize.css
+++ b/css/normalize.css
@@ -12,24 +12,7 @@ box-sizing: inherit;
 outline: none;
 }
 
-body {
-  min-width: 320px;
-  margin: 0;
-  position: relative;
-  font-family: "Open Sans", sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  color: #2d2d2d;
-  background-color: #999;
-}
-
-:root {
-  --color-orange: #fecb00;
-
-}
-
-
-h1, h2, h3, p, ul {
+h1, h2, h3, p, ul, ol {
   margin-top: 0;
 }
 
