refactor: add code example

--- a/css/style.css
+++ b/css/style.css
@@ -282,10 +282,19 @@ a.contacts__descr:focus {
 }
 
 .logo {
-  width: 200px;
+  width: 200px; 
 }
 
-
+.nav__list {
+  padding-left: 0;
+  margin-bottom: 0;
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  max-width: 580px;
+  gap: 1rem;
+  
+}
 
 
 @media (max-width: 1200px) {
