--- a/css/normalize.css
+++ b/css/normalize.css
@@ -18,7 +18,7 @@ h1, h2, h3, p, ul, ol {
 }
 
 li {
-  list-style: none;  
+  list-style: none;
 }
 
 
@@ -31,6 +31,7 @@ pre {
 a {
   background-color: transparent;
   color: inherit;
+  text-decoration: none;
 }
 
 img {
