--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
   margin-top: auto;
 	margin-bottom: auto;
 	background-color: var(--color-orange);
-	
+
 }
 
 .me__name {
@@ -97,7 +97,7 @@ body {
 }
 
 .section {
-	padding: 50px 0 0 15%;
+	padding: 50px 0 0 9.3%;
 }
 
 .main__left .headline {
@@ -111,31 +111,32 @@ body {
 .skills__list,
 .education__list {
   margin-bottom: 0;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 0;
+}
+
+/* LEFT */
+.main__left .section {
+  padding-left: 0;
+}
+
+.main__left .headline {
+  margin-left: 15%;
 }
 
 .skills__item {
+  padding-left: 20%;
   line-height: 2em;
   font-weight: 600;
 }
 
 .soft-skills {
-  padding-left: 35px;
+
   position: relative;
+  line-height: 3rem;
 }
 
-.soft-skills::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 30px;
-  height: 30px;
-  background-image: url('../img/check.svg');
-  background-size: 30px 30px;
-  z-index: 1;
-  transform: translateY(-50%);
+.soft-skills:nth-child(2n+1) {
+  background-color: var(--color-bg);
 }
 
 .soft-skills::before svg path {
@@ -152,25 +153,37 @@ body {
 }
 
 .contacts__item {
-  padding-left: 30px;
+  /* padding-left: 30px; */
   position: relative;
+
 }
 
 .contacts__item:not(:last-child) {
-  margin-bottom: 32px;
+  margin-bottom: 1rem;
 }
 
 
 .contacts__headline,
 .contacts__descr {
-  padding-left: .75rem;
+  padding-left: 90px;
 }
 
 .contacts__headline {
   margin-bottom: 0;
-  background-color: #292a2f;
+  background-color: var(--color-bg);
   line-height: 1.8em;
   font-weight: 700;
+  position: relative;
+}
+
+.contacts__headline::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 80px;
+  background-color: var(--color-orange);
 }
 
 .contacts__descr {
@@ -190,8 +203,13 @@ a.contacts__descr:focus {
 	margin-bottom: var(--top); */
 }
 
-.about__descr {
+.about__descr,
+.education__list,
+.languages__subcontainer {
   padding-right: 50px;
+}
+
+.about__descr {
   margin-bottom: 0;
   line-height: 2em;
   font-weight: 600;
@@ -210,7 +228,7 @@ a.contacts__descr:focus {
   font-size: 1.33rem;
   font-weight: 600;
   line-height: 2.25rem;
-  
+
 }
 
 .education__item:not(:last-child){
@@ -228,6 +246,10 @@ a.contacts__descr:focus {
   justify-content: space-between;
 }
 
+.languages__descr {
+  margin-bottom: 0;
+}
+
 .languages__descr:first-child {
   padding-left: 40px;
   position: relative;
@@ -240,15 +262,28 @@ a.contacts__descr:focus {
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  height: 1rem;
-  width: 1rem;
-  background-color: var(--color-border);
-  border-radius: 50%;
+  height: 2rem;
+  width: 2rem;
+  background-image: url('../img/check.svg');
+  background-size: 30px 30px;
+  z-index: 1;
 }
+/* .soft-skills::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 30px;
+  height: 30px;
 
+  background-size: 30px 30px;
+  z-index: 1;
+  transform: translateY(-50%);
+} */
 .main__right .skills__list {
 	columns: 2;
 }
+
 
 .prof-skills__item {
 	margin-bottom: 1rem;
@@ -311,21 +346,34 @@ a.contacts__descr:focus {
 }
 
 .logo {
-  width: 200px; 
+  width: 200px;
 }
 
 .nav__list {
   padding-left: 0;
   margin-bottom: 0;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
+  justify-content: end;
   flex-wrap: wrap;
-  max-width: 580px;
+  max-width: 420px;
   gap: 1rem;
-  
+
+}
+
+.github-link,
+.nav__link {
+  transition: opacity .3s linear;
+}
+
+.github-link:hover,
+.github-link:focus,
+.nav__link:hover,
+.nav__link:focus {
+  opacity: .6;
 }
 
 
 @media (max-width: 1200px) {
-  
+
 }
