--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,16 @@ body {
 }
 
 .photo {
-  width: 38%;
-	height: 600px;
+
   object-fit: cover;
   filter: grayscale(1);
   object-position: center;
+  transition: filter .3s linear;
 }
 
+.photo:hover {
+  filter: grayscale(0);
+}
 
 .me {
 	width: 62%;
@@ -70,21 +73,12 @@ body {
 
 /* MAIN */
 
-.main {
-	display: flex;
-}
+
 
 .main__left {
-	width: 38%;
 	background-color: #212026;
 	color: var(--color-white);
-}
-
-.main__right {
-	width: 62%;
-  position: relative;
-  top: var(--top);
-  margin-bottom: var(--top);
+  padding-bottom: 50px;
 }
 
 .headline {
@@ -96,10 +90,6 @@ body {
   text-transform: uppercase;
 }
 
-.section {
-	padding: 50px 0 0 9.3%;
-}
-
 .main__left .headline {
 	border-bottom: 3px solid var(--color-orange);
 }
@@ -108,6 +98,7 @@ body {
 	border-bottom: 3px solid var(--color-border);
 }
 
+.prof-skills__list,
 .skills__list,
 .education__list {
   margin-bottom: 0;
@@ -119,32 +110,31 @@ body {
   padding-left: 0;
 }
 
-.main__left .headline {
-  margin-left: 15%;
+.prof-skills__item {
+  position: relative;
+  font-weight: 600;
+  line-height: 3rem;
 }
 
 .skills__item {
-  padding-left: 20%;
-  line-height: 2em;
-  font-weight: 600;
-}
-
-.soft-skills {
-
+  padding-left: 30px;
   position: relative;
   line-height: 3rem;
 }
 
-.soft-skills:nth-child(2n+1) {
-  background-color: var(--color-bg);
+.skills__item::before {
+  content: '\002714';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 2rem;
+  height: 2rem;
 }
 
-.soft-skills::before svg path {
-  fill: var(--color-white);
-}
 
-.contacts {
-  padding-bottom: 50px;
+
+.skills__item svg path {
+  fill: #fff;
 }
 
 .contacts__list {
@@ -198,9 +188,7 @@ a.contacts__descr:focus {
 }
 
 .main__right {
-	position: relative;
-	/* top: var(--top);
-	margin-bottom: var(--top); */
+	padding-bottom: 50px;
 }
 
 .about__descr,
@@ -251,35 +239,24 @@ a.contacts__descr:focus {
 }
 
 .languages__descr:first-child {
-  padding-left: 40px;
+  padding-left: 30px;
   position: relative;
   display: inline-block;
 }
 
 .languages__descr:first-child::before {
-  content: '';
+  content: '\002714';
   position: absolute;
-  top: 50%;
+  top: 0;
   left: 0;
-  transform: translateY(-50%);
+  /* transform: translateY(-50%); */
   height: 2rem;
   width: 2rem;
-  background-image: url('../img/check.svg');
-  background-size: 30px 30px;
-  z-index: 1;
-}
-/* .soft-skills::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 30px;
-  height: 30px;
 
   background-size: 30px 30px;
   z-index: 1;
-  transform: translateY(-50%);
-} */
+}
+
 .main__right .skills__list {
 	columns: 2;
 }
@@ -354,11 +331,8 @@ a.contacts__descr:focus {
   margin-bottom: 0;
   display: flex;
   flex-direction: row;
-  justify-content: end;
   flex-wrap: wrap;
-  max-width: 420px;
   gap: 1rem;
-
 }
 
 .github-link,
@@ -374,6 +348,215 @@ a.contacts__descr:focus {
 }
 
 
-@media (max-width: 1200px) {
+@media (min-width: 951px) {
+  .photo {
+    width: 38%;
+    height: 600px;
+  }
 
+  .main {
+    display: flex;
+  }
+
+  .main__left {
+    width: 38%;
+  }
+
+  .main__right {
+    width: 62%;
+    position: relative;
+    top: var(--top);
+    margin-bottom: var(--top);
+  }
+
+  .main__left .headline {
+    margin-left: 15%;
+  }
+
+  .section {
+	padding: 50px 0 0 9.3%;
+}
+
+  .skills__list,
+  .prof-skills__list {
+    padding-left: 20%;
+    padding-right: 50px;
+  }
+
+  .nav__list {
+    justify-content: end;
+    max-width: 420px;
+  }
+}
+
+@media (min-width: 701px) and (max-width: 950px) {
+/* @media (max-width: 950px) { */
+  .photo {
+    width: 38%;
+  }
+
+  .main__left {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .wrap {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  .headline {
+    margin-left: 30px;
+    padding-top: 30px;
+  }
+
+
+  .skills {
+    width: 100%;
+  }
+
+  .prof-skills {
+    width: calc(50% - 15px);
+    order: 1;
+  }
+
+  .prof-skills__list {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .contacts {
+    margin-right: 30px;
+    flex-grow: 1;
+    align-self: flex-end;
+  }
+
+  .prof-skills {
+    align-self: flex-end;
+  }
+
+  .skills__list {
+    padding-left: 50px;
+    padding-right: 50px;
+    /* display: flex; */
+    /* flex-flow: column wrap; */
+    max-height: 500px;
+  }
+
+  .skills__list {
+    columns: 2;
+  }
+
+  .skills__item {
+    padding-left: 40px;
+  }
+
+  .skills__item::before {
+    content: '\002714';
+    position: absolute;
+    top: 0;
+    left: 10px;
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .footer {
+    flex-wrap: wrap;
+    gap: 50px;
+  }
+
+  .nav {
+    width: 100%;
+  }
+
+  .nav__list {
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 700px) {
+  body {
+    font-size: 80%;
+  }
+  .header {
+    flex-direction: column;
+  }
+
+  .me {
+    width: 100%;
+    padding: 15px 0;
+  }
+
+  .me__name {
+    font-size: 2rem;
+    margin-bottom: 0;
+  }
+
+  .me__descr {
+    font-size: 1.2rem;
+  }
+
+  .headline {
+    padding-top: 30px;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    margin-left: 30px;
+    text-align: center;
+  }
+
+  .skills__list,
+  .prof-skills__list {
+    padding-left: 30px;
+    padding-right: 30px;
+    columns: 200px;
+    margin: 0 auto;
+  }
+
+  .skills__item {
+    max-width: 200px;
+    line-height: 2rem;
+  }
+
+  .contacts__list {
+    columns: 250px;
+  }
+
+  .wrap {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .code__descr {
+    margin-right: 0;
+    font-size: .55rem;
+  }
+
+  .about__descr {
+    padding-right: 0;
+  }
+
+  .education__list {
+    padding-right: 0;
+  }
+
+  .education__item {
+    text-align: center;
+  }
+
+  .footer {
+    flex-wrap: wrap;
+    gap: 50px;
+  }
+
+  .logo {
+    width: 150px;
+  }
+
+  .nav {
+    width: 100%;
+  }
+
+  .nav__list {
+    justify-content: space-between;
+  }
 }
